# agile-team

./: .gitignore  .vercelignore  README.md  agile-team.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: worker.yml
.playwright-mcp/: page-2026-05-25T18-09-33-406Z.yml  page-2026-05-25T18-09-51-560Z.yml  page-2026-05-25T18-18-46-401Z.yml  page-2026-05-25T18-41-56-028Z.yml  page-2026-05-25T18-42-12-530Z.yml  page-2026-05-25T18-59-02-787Z.yml  page-2026-05-25T19-13-07-474Z.yml  page-2026-05-25T19-41-32-009Z.yml  page-2026-05-25T19-41-40-745Z.yml
.vercel/: project.json
api/: index.py
src/agile_team/: orchestrator.py
src/agile_team.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agile_team/agents/: __init__.py  all.py  base.py  runner.py
src/agile_team/board/: engine.py  service.py
src/agile_team/cli/: main.py
src/agile_team/llm/: base.py
src/agile_team/llm/providers/: deepseek_provider.py  ollama_provider.py
src/agile_team/shared/: config.py  models.py  storage.py
src/agile_team/web/: app.py
tests/: test_core.py
tests/e2e/: ui-api-tests.js
